--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
             </button>
 
             <div class="music-holder">
-                <!-- <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102137206&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe> -->
-                <!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=3&id=909029753&auto=1&height=66"></iframe> -->
+                <audio controls="controls" height="100" width="100" autoplay="autoplay" loop="loop">
+                    <source src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3" type="audio/mp3" />
+                    <embed height="100" width="100" src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3" />
+                </audio>
+                <!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://p0myo90fu.bkt.clouddn.com/Terdsak%20Janpan%20-%20Angel.mp3"></iframe> -->
+
             </div>
         </div>
         <!-- end music box -->
@@ -188,7 +192,7 @@
                                         <li><a href="#"><i class="fa fa-wechat"></i></a></li>
                                         <li><a href="#"><i class="fa fa-weibo"></i></a></li>
                                         <li><a href="#"><i class="fa fa-github"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -203,7 +207,7 @@
                                         <li><a href="#"><i class="fa fa-wechat"></i></a></li>
                                         <li><a href="#"><i class="fa fa-weibo"></i></a></li>
                                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -385,7 +389,7 @@
                                     <li><i class="fa fa-map-marker"></i>福建省福清市创元千禧酒店紫荆厅</li>
                                     <li><i class="fa fa-clock-o"></i>2018年02月13号 下午5点</li>
                                 </ul>
-                                <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                <p>我们将在创元酒店举行婚礼仪式，我们也选择该酒店作为需要住宿宾客的下榻住所。婚礼仪式将在6点举行，请各位宾客提前入场。</p>
                                 <a class="see-location-btn popup-gmaps" href="PartyBaiduMap.html">
                                     查看地图 <i class="fa fa-angle-right"></i>
                                 </a>
@@ -405,7 +409,7 @@
                     <div class="col col-xs-12">
                         <div class="section-title">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>Groomsmen &amp; Bridesmaid</h2>
+                            <h2>伴娘 &amp; 伴郎</h2>
                         </div>
                     </div>
                 </div> <!-- end section-title -->
@@ -416,10 +420,10 @@
                             <div class="tablist">
                                 <ul class="nav">
                                     <li class="active">
-                                        <a href="#groomsmen" data-toggle="tab">Groomsmen</a>
+                                        <a href="#groomsmen" data-toggle="tab">伴娘团</a>
                                     </li>
                                     <li>
-                                        <a href="#bridesmaid" data-toggle="tab">Bridesmaid</a>
+                                        <a href="#bridesmaid" data-toggle="tab">伴郎团</a>
                                     </li>
                                 </ul>
                             </div>
@@ -436,10 +440,10 @@
                                             <h3>Jhon Michel</h3>
                                             <span>Best man</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -453,10 +457,10 @@
                                             <h3>Chasmoos jhon</h3>
                                             <span>Best friden</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -470,10 +474,10 @@
                                             <h3>Kaiste pate</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -487,10 +491,10 @@
                                             <h3>Hatu Michel</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -504,10 +508,10 @@
                                             <h3>Michel doin</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -521,10 +525,10 @@
                                             <h3>Topper jone</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -541,10 +545,10 @@
                                             <h3>Rachel Li</h3>
                                             <span>Made of honor</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -558,10 +562,10 @@
                                             <h3>Male Vign</h3>
                                             <span>Best friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -575,10 +579,10 @@
                                             <h3>Jonny Mich</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -592,10 +596,10 @@
                                             <h3>Brodd Wid</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -609,10 +613,10 @@
                                             <h3>Nokshal bedi</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -626,10 +630,10 @@
                                             <h3>Holly Fie</h3>
                                             <span>Friend</span>
                                             <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
