--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <script >//--创建页面监听，等待微信端页面加载完毕 触发音频播放
-    document.addEventListener('DOMContentLoaded', function () {
-        function audioAutoPlay() {
-            var audio = document.getElementById('audio');
-            audio.play();
-            document.addEventListener("WeixinJSBridgeReady", function () {
+    <script >
+        document.addEventListener('DOMContentLoaded', function () {
+            function audioAutoPlay() {
+                var audio = document.getElementById('audio');
                 audio.play();
-            }, false);
-        }
-        audioAutoPlay();
-    });
-    //--创建触摸监听，当浏览器打开页面时，触摸屏幕触发事件，进行音频播放
-    document.addEventListener('touchstart', function () {
-        function audioAutoPlay() {
-            var audio = document.getElementById('audio');
-            audio.play();
-        }
-        audioAutoPlay();
-    });</script>
+                document.addEventListener("WeixinJSBridgeReady", function () {
+                    audio.play();
+                }, false);
+            }
+            audioAutoPlay();
+        });
+        document.addEventListener('touchstart', function () {
+            function audioAutoPlay() {
+                var audio = document.getElementById('audio');
+                audio.play();
+            }
+            audioAutoPlay();
+        });
+    </script>
     <![endif]-->
 
 </head>
