--- a/index.html
+++ b/index.html
@@ -35,30 +35,11 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-
+    <script src="js/weixinautoplay.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <script >
-        document.addEventListener('DOMContentLoaded', function () {
-            function audioAutoPlay() {
-                var audio = document.getElementById('audio');
-                audio.play();
-                document.addEventListener("WeixinJSBridgeReady", function () {
-                    audio.play();
-                }, false);
-            }
-            audioAutoPlay();
-        });
-        document.addEventListener('touchstart', function () {
-            function audioAutoPlay() {
-                var audio = document.getElementById('audio');
-                audio.play();
-            }
-            audioAutoPlay();
-        });
-    </script>
     <![endif]-->
 
 </head>
@@ -456,8 +437,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Jhon Michel</h3>
-                                            <span>Best man</span>
+                                            <h3>罗少罕</h3>
+                                            <span>网名: 紫亦晶莹</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -473,8 +454,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Chasmoos jhon</h3>
-                                            <span>Best friden</span>
+                                            <h3>陈振涛</h3>
+                                            <span>最具潜力行长</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -490,8 +471,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Kaiste pate</h3>
-                                            <span>Friend</span>
+                                            <h3>吴鹏程</h3>
+                                            <span>拥有两位数女友</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -507,8 +488,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Hatu Michel</h3>
-                                            <span>Friend</span>
+                                            <h3>李亚学</h3>
+                                            <span>laobalee 英雄联盟草丛之星</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -524,8 +505,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Michel doin</h3>
-                                            <span>Friend</span>
+                                            <h3>黄凯旋</h3>
+                                            <span>郴州市第十一高渐离</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -541,8 +522,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Topper jone</h3>
-                                            <span>Friend</span>
+                                            <h3>张文杰</h3>
+                                            <span>初中羁绊，最强王者</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -561,8 +542,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Rachel Li</h3>
-                                            <span>Made of honor</span>
+                                            <h3>罗少罕</h3>
+                                            <span>网名: 紫亦晶莹</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -578,8 +559,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Male Vign</h3>
-                                            <span>Best friend</span>
+                                            <h3>陈振涛</h3>
+                                            <span>最具潜力行长</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -595,8 +576,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Jonny Mich</h3>
-                                            <span>Friend</span>
+                                            <h3>吴鹏程</h3>
+                                            <span>拥有两位数女友</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -612,8 +593,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Brodd Wid</h3>
-                                            <span>Friend</span>
+                                            <h3>李亚学</h3>
+                                            <span>laobalee 英雄联盟草丛之星</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -629,8 +610,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Nokshal bedi</h3>
-                                            <span>Friend</span>
+                                            <h3>黄凯旋</h3>
+                                            <span>郴州市第十一高渐离</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -646,8 +627,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>Holly Fie</h3>
-                                            <span>Friend</span>
+                                            <h3>张文杰</h3>
+                                            <span>初中羁绊，嘴强王者</span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -682,10 +663,10 @@
                     <div class="col col-xs-12 sortable-gallery">
                         <div class="gallery-filters">
                             <ul>
-                                <li><a data-filter="*" href="#" class="current">All</a></li>
-                                <li><a data-filter=".wedding" href="#">Wedding</a></li>
-                                <li><a data-filter=".ceremony" href="#">Ceremony</a></li>
-                                <li><a data-filter=".party" href="#">Party</a></li>
+                                <li><a data-filter="*" href="#" class="current">所有</a></li>
+                                <li><a data-filter=".wedding" href="#">高中</a></li>
+                                <li><a data-filter=".ceremony" href="#">大学</a></li>
+                                <li><a data-filter=".party" href="#">硕士</a></li>
                             </ul>
                         </div>
 
@@ -755,24 +736,24 @@
                     <div class="col col-xs-12">
                         <div class="section-title-white">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>Join our party</h2>
+                            <h2>Join our wedding party</h2>
                         </div>
                     </div>
                 </div> <!-- end section-title -->
 
                 <div class="row content">
                     <div class="col col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                        <p>Please reserve before December 16th, 2017.</p>
+                        <p>请在2018年02月01日前填写该信息</p>
                         <form id="rsvp-form" class="form validate-rsvp-form row" method="post">
                             <div class="col col-sm-6">
-                                <input type="text" name="name" class="form-control" placeholder="Your Name*">
+                                <input type="text" name="name" class="form-control" placeholder="您的姓名*">
                             </div>
                             <div class="col col-sm-6">
-                                <input type="email" name="email" class="form-control" placeholder="Your Email*">
+                                <input type="email" name="email" class="form-control" placeholder="联系方式*">
                             </div>
                             <div class="col col-sm-6">
                                 <select class="form-control" name="guest" >
-                                    <option disabled selected>Number Of Guest*</option>
+                                    <option disabled selected>有几位客人*</option>
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
@@ -781,22 +762,21 @@
                             </div>
                             <div class="col col-sm-6">
                                 <select class="form-control" name="events" >
-                                    <option disabled selected>I Am Attending*</option>
-                                    <option>Al events</option>
-                                    <option>Wedding ceremony</option>
-                                    <option>Reception party</option>
+                                    <option disabled selected>2月13号晚是否住宿*</option>
+                                    <option>是</option>
+                                    <option>否</option>
                                 </select>
                             </div>
                             <div class="col col-sm-12">
-                                <textarea class="form-control" name="notes" placeholder="Your Message*"></textarea>
+                                <textarea class="form-control" name="notes" placeholder="想说的话..."></textarea>
                             </div>
                             <div class="col col-sm-12 submit-btn">
-                                <button type="submit" class="submit">Send Invitation</button>
+                                <button type="submit" class="submit">发送</button>
                                 <span id="loader"><i class="fa fa-refresh fa-spin fa-3x fa-fw"></i></span>
                             </div>
                             <div class="col col-md-12 success-error-message">
-                                <div id="success">Thank you</div>
-                                <div id="error"> Error occurred while sending email. Please try again later. </div>
+                                <div id="success">谢谢，期待您的光临</div>
+                                <div id="error"> 发送失败，请稍后重试. </div>
                             </div>
                         </form>
                     </div>
@@ -820,12 +800,14 @@
 
                 <div class="row content">
                     <div class="col col-md-6">
-                        <h3>Transportation</h3>
-                        <p> industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
+                        <h3>交通</h3>
+                        <p>由于临近春节，请各位提前安排行程。<br>高铁&动车：福清站，或到福州站中转
+                            <br>飞机：福州长乐机场，我们将派车接您到福清。特殊情况可乘机场大巴到福清瑞鑫大酒店。
+                        <br>驾车：沈海高速、长福高速</p>
                     </div>
                     <div class="col col-md-6">
-                        <h3>Accommodations</h3>
-                        <p> industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
+                        <h3>住宿</h3>
+                        <p>由于婚礼在2月13号晚举行，各位路途遥远的宾客如有需要住宿，我们将会为您安排下榻住所。请您提前安排2月14号的返程。</p>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
@@ -834,20 +816,21 @@
 
 
         <!-- start gift-registration-section -->
+<!--
         <section class="gift-registration-section section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="section-title">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>Gift registration</h2>
+                            <h2>Wedding Sketch</h2>
                         </div>
                     </div>
-                </div> <!-- end section-title -->
+                </div> &lt;!&ndash; end section-title &ndash;&gt;
 
                 <div class="row content">
                     <div class="col col-lg-10 col-lg-offset-1">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, cupiditate, repudiandae. A ab sit laboriosam quis distinctio dignissimos, nemo cum sed hic, deleniti maiores rem iste labore commodi perferendis cumque.repudiandae. A ab sit laboriosam quis distinctio dignissimos, nemo cum sed hic.</p>
+                        <p>感谢爸爸妈妈岳父岳母精心准备我们的婚礼</p>
 
                         <div class="gif-registration-slider">
                             <div class="register">
@@ -867,9 +850,9 @@
                             </div>
                         </div>
                     </div>
-                </div> <!-- end row -->
-            </div> <!-- end container -->
-        </section>
+                </div> &lt;!&ndash; end row &ndash;&gt;
+            </div> &lt;!&ndash; end container &ndash;&gt;
+        </section>-->
         <!-- end gift-registration-section -->
 
 
@@ -882,7 +865,6 @@
                 <div class="row">
                     <div class="col col-xs-12">
                         <h2>Forever and Always Our Love</h2>
-                        <span>- Mick (The groom)</span>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
