--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>罗少罕</h3>
-                                            <span>网名: 紫亦晶莹</span>
+                                            <h3>刘林</h3>
+                                            <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -454,8 +454,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>陈振涛</h3>
-                                            <span>最具潜力行长</span>
+                                            <h3>姚佳丽</h3>
+                                            <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -471,8 +471,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>吴鹏程</h3>
-                                            <span>拥有两位数女友</span>
+                                            <h3>朱丽岩</h3>
+                                            <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -488,8 +488,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>李亚学</h3>
-                                            <span>laobalee 英雄联盟草丛之星</span>
+                                            <h3>陈文怡</h3>
+                                            <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -505,8 +505,8 @@
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>黄凯旋</h3>
-                                            <span>郴州市第十一高渐离</span>
+                                            <h3>秦萍</h3>
+                                            <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
                                                 <li><a href="#"><i class="fa fa-weibo"></i></a></li>
@@ -515,7 +515,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="grid">
+                                    <!--<div class="grid">
                                         <div class="img-holder">
                                             <a href="images/groomsmen/img-6.jpg" class="popup-image">
                                                 <img src="images/groomsmen/img-6.jpg" alt class="img img-responsive">
@@ -531,7 +531,7 @@
                                                 <li><a href="#"><i class="fa fa-qq"></i></a></li>
                                             </ul>
                                         </div>
-                                    </div>
+                                    </div>-->
                                 </div>
 
                                 <div class="tab-pane fade grid-wrapper" id="bridesmaid">
